--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="section-text">
                 <h2>RSVP</h2>
                 <p>Please let us know if you can make it by **July 10th** so we can get a headcount for food and drinks!</p>
-                <p>You can RSVP by texting Adam at [Your Phone Number] or emailing [Your Email Address].</p>
+                <p>You can RSVP by texting Adam at 763-227-1777 or emailing adambrookins@gmail.com.</p>
                 <a href="sms:[Your Phone Number]" class="button">Text to RSVP</a>
                 <a href="mailto:[Your Email Address]" class="button">Email to RSVP</a>
             </div>
