--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>What to Expect</h2>
                 <p>We'll have plenty of **grilled food** on offer, refreshing **Tiki cocktails** (and non-alcoholic options!), plus **fun games** and awesome music.</p>
                 <p>Think **Huli Huli Chicken**, **Teriyaki Steak Skewers**, **Coconut Shrimp**, and plenty of tropical fruit. Don't forget your **swimsuit** and a **towel**! We'll have leis for everyone.</p>
-                <p class="dog-note">Our favorite Golden Retriever will be there in his best Hawaiian shirt, just like on the invite!</p>
+                <p class="dog-note">Our favorite dogs will be there in there best Hawaiian shirts!</p>
             </div>
         </section>
 
@@ -45,7 +45,7 @@
             <img src="path/to/your/rsvp_illustration.jpg" alt="RSVP Illustration" class="section-image">
             <div class="section-text">
                 <h2>RSVP</h2>
-                <p>Please let us know if you can make it by **July 10th** so we can get a headcount for food and drinks!</p>
+                <p>Please let us know if you can make it so we can get a headcount for food and drinks!</p>
                 <p>You can RSVP by texting Adam at 763-227-1777 or emailing adambrookins@gmail.com.</p>
                 <a href="sms:[Your Phone Number]" class="button">Text to RSVP</a>
                 <a href="mailto:[Your Email Address]" class="button">Email to RSVP</a>
@@ -63,13 +63,13 @@
                     <input type="text" id="chatbot-input" placeholder="Type your question here...">
                     <button id="chatbot-send">Send</button>
                 </div>
-                <small><em>Note: The bot above is a placeholder. A real AI bot would require integration with a third-party service.</em></small>
+                <small><em>Note: The bot above has been drinking and is likely worthless.</em></small>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Adam's Tiki Pool Party. All rights reserved.</p>
+        <p>&copy; 2025 Adam's Tiki Pool Party. No rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
