--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <section id="what-to-expect" class="section-block reverse">
-            <img src="path/to/your/grilled_food_illustration.jpg" alt="Grilled Food and Drinks Illustration" class="section-image">
+            <img src="https://github.com/adambrookins/adams-tiki-party/blob/main/bbq.png?raw=true" alt="Grilled Food and Drinks Illustration" class="section-image">
             <div class="section-text">
                 <h2>What to Expect</h2>
                 <p>We'll have plenty of **grilled food** on offer, refreshing **Tiki cocktails** (and non-alcoholic options!), plus **fun games** and awesome music.</p>
