--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <section id="details" class="section-block">
-            <img src="birthday.jpg" alt="Pool Party Illustration" class="section-image">
+            <img src="https://github.com/adambrookins/adams-tiki-party/blob/main/%20birthday.jpg?raw=true" alt="Pool Party Illustration" class="section-image">
             <div class="section-text">
                 <h2>Party Details</h2>
                 <ul>
