--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <section id="details" class="section-block">
-            <img src="https://github.com/adambrookins/adams-tiki-party/blob/main/%20birthday.jpg?raw=true" alt="Pool Party Illustration" class="section-image">
+            <img src="birthday.jpg" alt="Pool Party Illustration" class="section-image">
             <div class="section-text">
                 <h2>Party Details</h2>
                 <ul>
@@ -32,17 +32,17 @@
         </section>
 
         <section id="what-to-expect" class="section-block reverse">
-            <img src="https://github.com/adambrookins/adams-tiki-party/blob/main/bbq.png?raw=true" alt="Grilled Food and Drinks Illustration" class="section-image">
+            <img src="bbq.png" alt="Grilled Food and Drinks Illustration" class="section-image">
             <div class="section-text">
                 <h2>What to Expect</h2>
                 <p>We'll have plenty of **grilled food** on offer, refreshing **Tiki cocktails** (and non-alcoholic options!), plus **fun games** and awesome music.</p>
                 <p>Think **Huli Huli Chicken**, **Teriyaki Steak Skewers**, **Coconut Shrimp**, and plenty of tropical fruit. Don't forget your **swimsuit** and a **towel**! We'll have leis for everyone.</p>
-                <p class="dog-note">Our favorite dogs will be there in there best Hawaiian shirts!</p>
+                <p class="dog-note">Our favorite dogs will be there in their best Hawaiian shirts!</p>
             </div>
         </section>
 
         <section id="rsvp" class="section-block">
-            <img src="path/to/your/rsvp_illustration.jpg" alt="RSVP Illustration" class="section-image">
+            <img src="rsvp.jpg" alt="RSVP Illustration" class="section-image">
             <div class="section-text">
                 <h2>RSVP</h2>
                 <p>Please let us know if you can make it so we can get a headcount for food and drinks!</p>
