--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
 
         <section id="rsvp" class="section-block">
-            <img src="rsvp.jpg" alt="RSVP Illustration" class="section-image">
+            <img src="rsvp.jng" alt="RSVP Illustration" class="section-image">
             <div class="section-text">
                 <h2>RSVP</h2>
                 <p>Please let us know if you can make it so we can get a headcount for food and drinks!</p>
