--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="section-text">
                 <h2>What to Expect</h2>
                 <p>We'll have plenty of **grilled food** on offer, refreshing **Tiki cocktails** (and non-alcoholic options!), plus **fun games** and awesome music.</p>
-                <p>Think **Huli Huli Chicken**, **Teriyaki Steak Skewers**, **Coconut Shrimp**, and plenty of tropical fruit. Don't forget your **swimsuit** and a **towel**! We'll have leis for everyone.</p>
+                <p>Think **Huli Huli Chicken**, **Teriyaki Steak Skewers**, **Hog**, **Coconut Shrimp**, and plenty of tropical fruit. Don't forget your **swimsuit** and a **towel**! We'll have leis for everyone.</p>
                 <p class="dog-note">Our favorite dogs will be there in their best Hawaiian shirts!</p>
             </div>
         </section>
 
         <section id="rsvp" class="section-block">
-            <img src="rsvp.jng" alt="RSVP Illustration" class="section-image">
+            <img src="rsvp.png" alt="RSVP Illustration" class="section-image">
             <div class="section-text">
                 <h2>RSVP</h2>
                 <p>Please let us know if you can make it so we can get a headcount for food and drinks!</p>
@@ -69,7 +69,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Adam's Tiki Pool Party. No rights reserved.</p>
+        <p>&copy; 2025 Adam's Tiki Pool Party. No rights reserved. No fucks given.</p>
     </footer>
 
     <script src="script.js"></script>
